crates/sgf-core/tests/snapshots/ops_scenario_positions/move_system_2.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Moved Coruscant #2 from (0, -56) to (12.5, -60.25)
touched: [2]
inverse: MoveSystem { system: 2, x: 0.0, y: -56.0 }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 3 other issues

--- scenario
+++ scenario
@@ -33,7 +33,7 @@
 
 	### Systems, one per line in the mod's shape
 	system = { id = "1" name = "Galactic Center" position = { x = 0 y = 0 } initializer = misc_system_init_01 }
-	system = { id = "2" name = "Coruscant" position = { x = 0 y = -56 } initializer = custom_starting_init_01 spawn_weight = { base = 0 modifier = { add = 10000 has_country_flag = galactic_empire } } } # trailing comment with } brace
+	system = { id = "2" name = "Coruscant" position = { x = 12.5 y = -60.25 } initializer = custom_starting_init_01 spawn_weight = { base = 0 modifier = { add = 10000 has_country_flag = galactic_empire } } } # trailing comment with } brace
 	system = { id = "16" name = "" position = { x = -54 y = -88.5 z = 4 } }
 	system = { id = "111" name = "NAME_Corellia" position = { x = { min = 20 max = 30 } y = 18 } spawn_design = my_design }
