crates/sgf-core/tests/snapshots/ops_scenario_positions/remove_nebula_1.snap
---
source: crates/sgf-core/tests/ops_scenario_positions.rs
expression: "report(&session, &result)"
---
Removed nebula "Far Cloud" (1 system released)
touched: [9]
inverse: AddNebula { x: -90.0, y: 90.0, radius: 20.0, name: Some("Far Cloud") }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 2 other issues

--- scenario
+++ scenario
@@ -63,5 +63,4 @@
 	add_hyperlane = { from = "512" to = "888" }
 
 	nebula = { name = "NAME_N_Heart_Galaxy" position = { x = 0 y = 0 } radius = 60 }
-	nebula = { name = "Far Cloud" position = { x = -90 y = 90 } radius = 20 }
 }
