crates/sgf-core/tests/snapshots/ops_scenario_positions/set_nebula_name.snap
---
source: crates/sgf-core/tests/ops_scenario_positions.rs
expression: "report(&session, &result)"
---
Renamed nebula 0 from "NAME_N_Heart_Galaxy" to "Heart of the Galaxy"
touched: []
inverse: RenameNebula { index: 0, name: "NAME_N_Heart_Galaxy" }
warning coordinate_transform: the scenario has a coordinate_transform; positions are shown untransformed
… and 3 other issues

--- scenario
+++ scenario
@@ -62,6 +62,6 @@
 	add_hyperlane = { from = "3018" to = "512" }
 	add_hyperlane = { from = "512" to = "888" }
 
-	nebula = { name = "NAME_N_Heart_Galaxy" position = { x = 0 y = 0 } radius = 60 }
+	nebula = { name = "Heart of the Galaxy" position = { x = 0 y = 0 } radius = 60 }
 	nebula = { name = "Far Cloud" position = { x = -90 y = 90 } radius = 20 }
 }
